recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.code
def hanoi(height:Int, src:Int, other:Int, dst:Int) {
  if(height != 0){
  	hanoi(height-1, src, dst, other)
  	deplace(src, dst)
  	hanoi(height-1, other, src, dst)
  }
}

def interleavedHanoi(height:Int, src1:Int, src2:Int, other:Int, dst:Int) {
  if(height != 0){
    hanoi(height-1, src1, dst, other)
    deplace(src1, dst)
    hanoi(height-1, src2, dst, src1)
    deplace(src2, dst)
    interleavedHanoi(height-1, other, src1, src2, dst)
  }
}

def splitHanoi(height:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
  if(height != 0){
    hanoi(2 * height - 2, src, other)
    deplace(src, dst1)
    deplace(src, dst2)
    splitHanoi(height -1, other, src, dst1, dst2)
  }
}